--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,6 +27,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools wheel
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: pwd
+      run: pwd
     - name: Test challenge 1
       run: |
         python challenge1_brute_forcing/test/verify_submission.py
