add empty verifiers for all challenges

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,8 +27,18 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools wheel
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: pwd
-      run: pwd
     - name: Test challenge 1
       run: |
         python challenge1_brute_forcing/test/verify_submission.py
+    - name: Test challenge 2
+      run: |
+        python challenge2_ISS_apis/test/verify_submission.py
+    - name: Test challenge 3
+      run: |
+        python challenge3_RPi_sensors/test/verify_submission.py
+    - name: Test challenge 4
+      run: |
+        python challenge4_twilio/test/verify_submission.py
+    - name: Test challenge 5
+      run: |
+        python challenge5_performances/test/verify_submission.py
