--- a/.github/workflows/validator.yml
+++ b/.github/workflows/validator.yml
@@ -1,10 +1,6 @@
 name: Validator
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [push, pull_request]
 
 permissions:
   contents: read
