use python -m black reformat remove unused solutions folder

--- a/.github/workflows/validator.yml
+++ b/.github/workflows/validator.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Test challenge 2
       if: always()
       run: |
-        python challenge2_ISS_apis/test/verify_submissions.py
+        python -m challenge2_ISS_apis.test.verify_submissions
     - name: Test challenge 3
       if: always()
       run: |
@@ -37,4 +37,4 @@ jobs:
     - name: Test challenge 5
       if: always()
       run: |
-        python challenge5_performances/test/verify_submissions.py
+        python -m challenge5_performances.test.verify_submissions.py
