--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,22 +20,22 @@ jobs:
         python -m pip install --upgrade pip setuptools wheel
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test challenge 1
-      continue-on-error: true
+      if: always()
       run: |
         python challenge1_brute_forcing/test/verify_submissions.py
     - name: Test challenge 2
-      continue-on-error: true
+      if: always()
       run: |
         python -m challenge2_ISS_apis.test.verify_submissions
     - name: Test challenge 3
-      continue-on-error: true
+      if: always()
       run: |
         python challenge3_RPi_sensors/test/verify_submissions.py
     - name: Test challenge 4
-      continue-on-error: true
+      if: always()
       run: |
         python challenge4_twilio/test/verify_submissions.py
     - name: Test challenge 5
-      continue-on-error: true
+      if: always()
       run: |
         python -m challenge5_performances.test.verify_submissions.py
