--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        if pip install -r requirements.txt
+        python -m pip install -r requirements.txt
     - name: Test challenge 1
       if: always()
       run: |
