--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ jobs:
       with:
         python-version: "3.10"
     - name: Install dependencies
+      if: always()
       run: |
         python -m pip install --upgrade pip setuptools wheel
         python -m pip install -r requirements.txt
