--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
+        if: always()
         python -m pip install --upgrade pip setuptools wheel
         python -m pip install -r requirements.txt
     - name: Test challenge 1
