--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,10 @@ jobs:
       with:
         python-version: "3.10"
     - name: Install dependencies
+      if: always()
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        python -m pip install -r requirements.txt
     - name: Test challenge 1
       if: always()
       run: |
@@ -34,4 +35,4 @@ jobs:
     - name: Test challenge 4
       if: always()
       run: |
-        python challenge4_palindromes/test/verify_submissions.py
+        python challenge4_palindromes.test.verify_submissions
